[gd_scene load_steps=36 format=4 uid="uid://cyexyx54gft8m"]

[ext_resource type="Script" path="res://scripts/Johann/Johann_PlayerManager.gd" id="1_df6yh"]
[ext_resource type="PackedScene" uid="uid://7jimtt82avqg" path="res://scenes/ProcStairs.tscn" id="1_e2kfs"]
[ext_resource type="Shader" uid="uid://4np5wvmrrk8g" path="res://materials/shaders/grid_shader.gdshader" id="1_hfevb"]
[ext_resource type="Texture2D" uid="uid://b8iw8gfyw4eay" path="res://materials/textures/6qhd2mwv0o2djuj7lux8q.jpg" id="2_i7e33"]
[ext_resource type="Script" path="res://scripts/Johann/Johann_PlayerCharacter.gd" id="2_qpf51"]
[ext_resource type="Script" path="res://scripts/Johann/Johann_PlayerCamera.gd" id="3_3xcbl"]
[ext_resource type="Texture2D" uid="uid://cxmpe27vltujf" path="res://icon.svg" id="5_bfkrt"]
[ext_resource type="Shader" uid="uid://c6sdcoaf2ojf6" path="res://materials/shaders/outline_shader.gdshader" id="6_i7e33"]
[ext_resource type="Shader" uid="uid://cy6ukkmtolj1t" path="res://materials/shaders/toon_shader_no_depth.gdshader" id="7_x8qgb"]
[ext_resource type="ArrayMesh" path="res://meshes/vfx/slash_mesh_mesh.res" id="9_xr6jn"]
[ext_resource type="Shader" uid="uid://dmus6t2fhh1n7" path="res://materials/shaders/depth_outline_shader.gdshader" id="10_x8qgb"]
[ext_resource type="Shader" path="res://materials/shaders/slash_vfx_test.tres" id="11_boon8"]

[sub_resource type="BoxShape3D" id="BoxShape3D_tqh3n"]
size = Vector3(10, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_i4vfv"]
size = Vector3(10, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xr6jn"]
render_priority = 0
shader = ExtResource("6_i7e33")
shader_parameter/outline_color = Color(0, 0, 0, 1)
shader_parameter/outline_width = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x8qgb"]
render_priority = 0
next_pass = SubResource("ShaderMaterial_xr6jn")
shader = ExtResource("1_hfevb")
shader_parameter/grid_texture = ExtResource("2_i7e33")
shader_parameter/grid_scale = 1.0
shader_parameter/gridBase_color = Color(1, 0.439216, 0.541176, 1)
shader_parameter/gridLine_color = Color(1, 1, 1, 1)
shader_parameter/lit_color = Color(1, 1, 1, 1)
shader_parameter/unlit_color = Color(0, 0, 0, 1)
shader_parameter/cel_threshold = 0.5
shader_parameter/cel_sharpness = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_e2kfs"]
vertex_color_use_as_albedo = true

[sub_resource type="ArrayMesh" id="ArrayMesh_loe1w"]
_surfaces = [{
"aabb": AABB(0, 0, 0, 1, 6.75, 6.75),
"attribute_data": PackedByteArray("/////wAAAAAAAIA//////wAAAAAAAIA+/////wAAgD8AAIA+/////wAAgD8AAIA+/////wAAgD8AAIA//////wAAAAAAAIA//////wAAAAAAAIA//////wAAAAAAAIA+/////wAAgD8AAIA+/////wAAgD8AAIA+/////wAAgD8AAIA//////wAAAAAAAIA//////wAAgD8AAIA+/////wAAgD4AAIA+/////wAAgD4AAIA//////wAAgD4AAIA//////wAAgD8AAIA//////wAAgD8AAIA+/////wAAgD8AAIA//////wAAgD4AAIA//////wAAgD4AAIA+/////wAAgD4AAIA+/////wAAgD8AAIA+/////wAAgD8AAIA//////wAAAAAAAIA+/////wAAAAAAAAC//////wAAgD8AAAC//////wAAgD8AAAC//////wAAgD8AAIA+/////wAAAAAAAIA+/////wAAAAAAAIA+/////wAAAAAAAAC//////wAAgD8AAAC//////wAAgD8AAAC//////wAAgD8AAIA+/////wAAAAAAAIA+/////wAAgD4AAAC//////wAAAL8AAAC//////wAAAL8AAIA//////wAAAL8AAIA//////wAAgD4AAIA//////wAAgD4AAAC//////wAAgD4AAIA//////wAAAL8AAIA//////wAAAL8AAAC//////wAAAL8AAAC//////wAAgD4AAAC//////wAAgD4AAIA//////wAAAAAAAAC//////wAAAAAAAKC//////wAAgD8AAKC//////wAAgD8AAKC//////wAAgD8AAAC//////wAAAAAAAAC//////wAAAAAAAAC//////wAAAAAAAKC//////wAAgD8AAKC//////wAAgD8AAKC//////wAAgD8AAAC//////wAAAAAAAAC//////wAAAL8AAKC//////wAAoL8AAKC//////wAAoL8AAIA//////wAAoL8AAIA//////wAAAL8AAIA//////wAAAL8AAKC//////wAAAL8AAIA//////wAAoL8AAIA//////wAAoL8AAKC//////wAAoL8AAKC//////wAAAL8AAKC//////wAAAL8AAIA//////wAAAAAAAKC//////wAAAAAAAADA/////wAAgD8AAADA/////wAAgD8AAADA/////wAAgD8AAKC//////wAAAAAAAKC//////wAAAAAAAKC//////wAAAAAAAADA/////wAAgD8AAADA/////wAAgD8AAADA/////wAAgD8AAKC//////wAAAAAAAKC//////wAAoL8AAADA/////wAAAMAAAADA/////wAAAMAAAIA//////wAAAMAAAIA//////wAAoL8AAIA//////wAAoL8AAADA/////wAAoL8AAIA//////wAAAMAAAIA//////wAAAMAAAADA/////wAAAMAAAADA/////wAAoL8AAADA/////wAAoL8AAIA//////wAAAAAAAADA/////wAAAAAAADDA/////wAAgD8AADDA/////wAAgD8AADDA/////wAAgD8AAADA/////wAAAAAAAADA/////wAAAAAAAADA/////wAAAAAAADDA/////wAAgD8AADDA/////wAAgD8AADDA/////wAAgD8AAADA/////wAAAAAAAADA/////wAAAMAAADDA/////wAAMMAAADDA/////wAAMMAAAIA//////wAAMMAAAIA//////wAAAMAAAIA//////wAAAMAAADDA/////wAAAMAAAIA//////wAAMMAAAIA//////wAAMMAAADDA/////wAAMMAAADDA/////wAAAMAAADDA/////wAAAMAAAIA//////wAAAAAAADDA/////wAAAAAAAGDA/////wAAgD8AAGDA/////wAAgD8AAGDA/////wAAgD8AADDA/////wAAAAAAADDA/////wAAAAAAADDA/////wAAAAAAAGDA/////wAAgD8AAGDA/////wAAgD8AAGDA/////wAAgD8AADDA/////wAAAAAAADDA/////wAAMMAAAGDA/////wAAYMAAAGDA/////wAAYMAAAIA//////wAAYMAAAIA//////wAAMMAAAIA//////wAAMMAAAGDA/////wAAMMAAAIA//////wAAYMAAAIA//////wAAYMAAAGDA/////wAAYMAAAGDA/////wAAMMAAAGDA/////wAAMMAAAIA//////wAAAAAAAGDA/////wAAAAAAAIjA/////wAAgD8AAIjA/////wAAgD8AAIjA/////wAAgD8AAGDA/////wAAAAAAAGDA/////wAAAAAAAGDA/////wAAAAAAAIjA/////wAAgD8AAIjA/////wAAgD8AAIjA/////wAAgD8AAGDA/////wAAAAAAAGDA/////wAAYMAAAIjA/////wAAiMAAAIjA/////wAAiMAAAIA//////wAAiMAAAIA//////wAAYMAAAIA//////wAAYMAAAIjA/////wAAYMAAAIA//////wAAiMAAAIA//////wAAiMAAAIjA/////wAAiMAAAIjA/////wAAYMAAAIjA/////wAAYMAAAIA//////wAAAAAAAIjA/////wAAAAAAAKDA/////wAAgD8AAKDA/////wAAgD8AAKDA/////wAAgD8AAIjA/////wAAAAAAAIjA/////wAAAAAAAIjA/////wAAAAAAAKDA/////wAAgD8AAKDA/////wAAgD8AAKDA/////wAAgD8AAIjA/////wAAAAAAAIjA/////wAAiMAAAKDA/////wAAoMAAAKDA/////wAAoMAAAIA//////wAAoMAAAIA//////wAAiMAAAIA//////wAAiMAAAKDA/////wAAiMAAAIA//////wAAoMAAAIA//////wAAoMAAAKDA/////wAAoMAAAKDA/////wAAiMAAAKDA/////wAAiMAAAIA//////wAAAAAAAKDA/////wAAAAAAALjA/////wAAgD8AALjA/////wAAgD8AALjA/////wAAgD8AAKDA/////wAAAAAAAKDA/////wAAAAAAAKDA/////wAAAAAAALjA/////wAAgD8AALjA/////wAAgD8AALjA/////wAAgD8AAKDA/////wAAAAAAAKDA/////wAAoMAAALjA/////wAAuMAAALjA/////wAAuMAAAIA//////wAAuMAAAIA//////wAAoMAAAIA//////wAAoMAAALjA/////wAAoMAAAIA//////wAAuMAAAIA//////wAAuMAAALjA/////wAAuMAAALjA/////wAAoMAAALjA/////wAAoMAAAIA//////wAAAAAAAIA//////wAAAAAAALjA/////wAAgD8AALjA/////wAAgD8AALjA/////wAAgD8AAIA//////wAAAAAAAIA/"),
"format": 34359738399,
"material": SubResource("StandardMaterial3D_e2kfs"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 222,
"vertex_data": PackedByteArray("AACAPwAAAAAAAAAAAACAPwAAQD8AAAAAAAAAAAAAQD8AAAAAAAAAAAAAQD8AAAAAAAAAAAAAAAAAAAAAAACAPwAAAAAAAAAAAACAPwAAQD8AAAAAAACAPwAAQD8AAEA/AAAAAAAAQD8AAEA/AAAAAAAAQD8AAEA/AAAAAAAAQD8AAAAAAACAPwAAQD8AAAAAAAAAAAAAQD8AAAAAAAAAAAAAQD8AAEA/AAAAAAAAAAAAAEA/AAAAAAAAAAAAAEA/AAAAAAAAAAAAAAAAAAAAAAAAQD8AAAAAAACAPwAAAAAAAAAAAACAPwAAAAAAAEA/AACAPwAAQD8AAEA/AACAPwAAQD8AAEA/AACAPwAAQD8AAAAAAACAPwAAAAAAAAAAAACAPwAAQD8AAEA/AACAPwAAwD8AAEA/AAAAAAAAwD8AAEA/AAAAAAAAwD8AAEA/AAAAAAAAQD8AAEA/AACAPwAAQD8AAEA/AACAPwAAwD8AAEA/AACAPwAAwD8AAMA/AAAAAAAAwD8AAMA/AAAAAAAAwD8AAMA/AAAAAAAAwD8AAEA/AACAPwAAwD8AAEA/AAAAAAAAwD8AAEA/AAAAAAAAwD8AAMA/AAAAAAAAAAAAAMA/AAAAAAAAAAAAAMA/AAAAAAAAAAAAAEA/AAAAAAAAwD8AAEA/AACAPwAAAAAAAEA/AACAPwAAAAAAAMA/AACAPwAAwD8AAMA/AACAPwAAwD8AAMA/AACAPwAAwD8AAEA/AACAPwAAAAAAAEA/AACAPwAAwD8AAMA/AACAPwAAEEAAAMA/AAAAAAAAEEAAAMA/AAAAAAAAEEAAAMA/AAAAAAAAwD8AAMA/AACAPwAAwD8AAMA/AACAPwAAEEAAAMA/AACAPwAAEEAAABBAAAAAAAAAEEAAABBAAAAAAAAAEEAAABBAAAAAAAAAEEAAAMA/AACAPwAAEEAAAMA/AAAAAAAAEEAAAMA/AAAAAAAAEEAAABBAAAAAAAAAAAAAABBAAAAAAAAAAAAAABBAAAAAAAAAAAAAAMA/AAAAAAAAEEAAAMA/AACAPwAAAAAAAMA/AACAPwAAAAAAABBAAACAPwAAEEAAABBAAACAPwAAEEAAABBAAACAPwAAEEAAAMA/AACAPwAAAAAAAMA/AACAPwAAEEAAABBAAACAPwAAQEAAABBAAAAAAAAAQEAAABBAAAAAAAAAQEAAABBAAAAAAAAAEEAAABBAAACAPwAAEEAAABBAAACAPwAAQEAAABBAAACAPwAAQEAAAEBAAAAAAAAAQEAAAEBAAAAAAAAAQEAAAEBAAAAAAAAAQEAAABBAAACAPwAAQEAAABBAAAAAAAAAQEAAABBAAAAAAAAAQEAAAEBAAAAAAAAAAAAAAEBAAAAAAAAAAAAAAEBAAAAAAAAAAAAAABBAAAAAAAAAQEAAABBAAACAPwAAAAAAABBAAACAPwAAAAAAAEBAAACAPwAAQEAAAEBAAACAPwAAQEAAAEBAAACAPwAAQEAAABBAAACAPwAAAAAAABBAAACAPwAAQEAAAEBAAACAPwAAcEAAAEBAAAAAAAAAcEAAAEBAAAAAAAAAcEAAAEBAAAAAAAAAQEAAAEBAAACAPwAAQEAAAEBAAACAPwAAcEAAAEBAAACAPwAAcEAAAHBAAAAAAAAAcEAAAHBAAAAAAAAAcEAAAHBAAAAAAAAAcEAAAEBAAACAPwAAcEAAAEBAAAAAAAAAcEAAAEBAAAAAAAAAcEAAAHBAAAAAAAAAAAAAAHBAAAAAAAAAAAAAAHBAAAAAAAAAAAAAAEBAAAAAAAAAcEAAAEBAAACAPwAAAAAAAEBAAACAPwAAAAAAAHBAAACAPwAAcEAAAHBAAACAPwAAcEAAAHBAAACAPwAAcEAAAEBAAACAPwAAAAAAAEBAAACAPwAAcEAAAHBAAACAPwAAkEAAAHBAAAAAAAAAkEAAAHBAAAAAAAAAkEAAAHBAAAAAAAAAcEAAAHBAAACAPwAAcEAAAHBAAACAPwAAkEAAAHBAAACAPwAAkEAAAJBAAAAAAAAAkEAAAJBAAAAAAAAAkEAAAJBAAAAAAAAAkEAAAHBAAACAPwAAkEAAAHBAAAAAAAAAkEAAAHBAAAAAAAAAkEAAAJBAAAAAAAAAAAAAAJBAAAAAAAAAAAAAAJBAAAAAAAAAAAAAAHBAAAAAAAAAkEAAAHBAAACAPwAAAAAAAHBAAACAPwAAAAAAAJBAAACAPwAAkEAAAJBAAACAPwAAkEAAAJBAAACAPwAAkEAAAHBAAACAPwAAAAAAAHBAAACAPwAAkEAAAJBAAACAPwAAqEAAAJBAAAAAAAAAqEAAAJBAAAAAAAAAqEAAAJBAAAAAAAAAkEAAAJBAAACAPwAAkEAAAJBAAACAPwAAqEAAAJBAAACAPwAAqEAAAKhAAAAAAAAAqEAAAKhAAAAAAAAAqEAAAKhAAAAAAAAAqEAAAJBAAACAPwAAqEAAAJBAAAAAAAAAqEAAAJBAAAAAAAAAqEAAAKhAAAAAAAAAAAAAAKhAAAAAAAAAAAAAAKhAAAAAAAAAAAAAAJBAAAAAAAAAqEAAAJBAAACAPwAAAAAAAJBAAACAPwAAAAAAAKhAAACAPwAAqEAAAKhAAACAPwAAqEAAAKhAAACAPwAAqEAAAJBAAACAPwAAAAAAAJBAAACAPwAAqEAAAKhAAACAPwAAwEAAAKhAAAAAAAAAwEAAAKhAAAAAAAAAwEAAAKhAAAAAAAAAqEAAAKhAAACAPwAAqEAAAKhAAACAPwAAwEAAAKhAAACAPwAAwEAAAMBAAAAAAAAAwEAAAMBAAAAAAAAAwEAAAMBAAAAAAAAAwEAAAKhAAACAPwAAwEAAAKhAAAAAAAAAwEAAAKhAAAAAAAAAwEAAAMBAAAAAAAAAAAAAAMBAAAAAAAAAAAAAAMBAAAAAAAAAAAAAAKhAAAAAAAAAwEAAAKhAAACAPwAAAAAAAKhAAACAPwAAAAAAAMBAAACAPwAAwEAAAMBAAACAPwAAwEAAAMBAAACAPwAAwEAAAKhAAACAPwAAAAAAAKhAAACAPwAAwEAAAMBAAACAPwAA2EAAAMBAAAAAAAAA2EAAAMBAAAAAAAAA2EAAAMBAAAAAAAAAwEAAAMBAAACAPwAAwEAAAMBAAACAPwAA2EAAAMBAAACAPwAA2EAAANhAAAAAAAAA2EAAANhAAAAAAAAA2EAAANhAAAAAAAAA2EAAAMBAAACAPwAA2EAAAMBAAAAAAAAA2EAAAMBAAAAAAAAA2EAAANhAAAAAAAAAAAAAANhAAAAAAAAAAAAAANhAAAAAAAAAAAAAAMBAAAAAAAAA2EAAAMBAAACAPwAAAAAAAMBAAACAPwAAAAAAANhAAACAPwAA2EAAANhAAACAPwAA2EAAANhAAACAPwAA2EAAAMBAAACAPwAAAAAAAMBAAAAAAAAAAAAAANhAAAAAAAAA2EAAANhAAACAPwAA2EAAANhAAACAPwAA2EAAANhAAACAPwAAAAAAANhAAAAAAAAAAAAAANhA////vwAA/9//v//f/x//15kZzMzRRVy0mRnMzNFFXLQAAP+//z//v////78AAP/f/7//3/8f/9dl5szMRRfn4v8//9//L/+v/z//3/8v/6+ZGczM0UVctP+//9//H//XmRnMzLnouWj/P//f/9//dwAA/3///wAAAAD/f///AAAAAP+/////H5kZzMy56Llo////vwAA/9////9//////2XmzMxFF0WXZebMzEUXRZf/v//f/x//h////78AAP/fZebMzEUX5+L/v//f/x//15kZzMzRRVy0mRnMzNFFXLT/P//f/y//r2XmzMxFF+fi/7//3/8f/9dl5szMRRfn4v8//9//L/+v/z//3/8v/6+ZGczM0UVctP+//9//H//XmRnMzLnouWj/P//f/9//dwAA/3///wAAAAD/f///AAAAAP9///8AAJkZzMy56Llo////f/////////9//////2XmzMxFF0WXZebMzEUXRZf/v//f/x//h////3//////ZebMzEUX5+L/v//f/x//15kZzMzRRVy0mRnMzNFFXLT/P//f/y//r2XmzMxFF+fi/7//3/8f/9dl5szMRRfn4v8//9//L/+v/z//3/8v/6+ZGczM0UVctP+//9//H//XmRnMzLnouWj/P//f/9//dwAA/3///wAAAAD/f///AAAAAP9///8AAJkZzMy56Llo////f/////////9//////2XmzMxFF0WXZebMzEUXRZf/v//f/x//h////3//////ZebMzEUX5+L/v//f/x//15kZzMzRRVy0mRnMzNFFXLT/P//f/y//r2XmzMxFF+fi/7//3/8f/9dl5szMRRfn4v8//9//L/+v/z//3/8v/6+ZGczM0UVctP+//9//H//XmRnMzLnouWj/P//f/9//dwAA/3///wAAAAD/f///AAAAAP9///8AAJkZzMy56Llo////f/////////9//////2XmzMxFF0WXZebMzEUXRZf/v//f/x//h////3//////ZebMzEUX5+L/v//f/x//15kZzMzRRVy0mRnMzNFFXLT/P//f/y//r2XmzMxFF+fi/7//3/8f/9dl5szMRRfn4v8//9//L/+v/z//3/8v/6+ZGczM0UVctP+//9//H//XmRnMzLnouWj/P//f/9//dwAA/3///wAAAAD/f///AAAAAP9///8AAJkZzMy56Llo////f/////////9//////2XmzMxFF0WXZebMzEUXRZf/v//f/x//h////3//////ZebMzEUX5+L/v//f/x//15kZzMzRRVy0mRnMzNFFXLT/P//f/y//r2XmzMxFF+fi/7//3/8f/9dl5szMRRfn4v8//9//L/+v/z//3/8v/6+ZGczM0UVctP+//9//H//XmRnMzLnouWj/P//f/9//dwAA/3///wAAAAD/f///AAAAAP9///8AAJkZzMy56Llo////f/////////9//////2XmzMxFF0WXZebMzEUXRZf/v//f/x//h////3//////ZebMzEUX5+L/v//f/x//15kZzMzRRVy0mRnMzNFFXLT/P//f/y//r2XmzMxFF+fi/7//3/8f/9dl5szMRRfn4v8//9//L/+v/z//3/8v/6+ZGczM0UVctP+//9//H//XmRnMzLnouWj/P//f/9//dwAA/3///wAAAAD/f///AAAAAP9///8AAJkZzMy56Llo////f/////////9//////2XmzMxFF0WXZebMzEUXRZf/v//f/x//h////3//////ZebMzEUX5+L/v//f/x//15kZzMzRRVy0mRnMzNFFXLT/P//f/y//r2XmzMxFF+fi/7//3/8f/9dl5szMRRfn4v8//9//L/+v/z//3/8v/6+ZGczM0UVctP+//9//H//XmRnMzLnouWj/P//f/9//dwAA/3///wAAAAD/f///AAAAAP9///8AAJkZzMy56Llo////f/////////9//////2XmzMxFF0WXZebMzEUXRZf/v//f/x//h////3//////ZebMzEUX5+L/v//f/x//15kZzMzRRVy0mRnMzNFFXLT/P//f/y//r2XmzMxFF+fi/7//3/8f/9cys5mZ0UWiy/9f/7//H/+n/1//v/8f/6eZGczM0UVctP+//9//H//XmRnMzLnouWj/X/+//x//B/8//38AAP8f/z//fwAA/x8AAP9///8AAJkZzMy56Llo////f///////v/9/////3zKzmZm56LnoMrOZmbnouej/v//f/x//h////3///////z//f/+//7//X/+//8//zzKzmZm56BadMrOZmbnoFp3/v/9/////3/8//3//v/+/")
}]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_bfkrt"]
data = PackedVector3Array(1, 0, 0, 1, 0.75, 0, 0, 0.75, 0, 0, 0.75, 0, 0, 0, 0, 1, 0, 0, 1, 0.75, 0, 1, 0.75, 0.75, 0, 0.75, 0.75, 0, 0.75, 0.75, 0, 0.75, 0, 1, 0.75, 0, 0, 0.75, 0, 0, 0.75, 0.75, 0, 0, 0.75, 0, 0, 0.75, 0, 0, 0, 0, 0.75, 0, 1, 0, 0, 1, 0, 0.75, 1, 0.75, 0.75, 1, 0.75, 0.75, 1, 0.75, 0, 1, 0, 0, 1, 0.75, 0.75, 1, 1.5, 0.75, 0, 1.5, 0.75, 0, 1.5, 0.75, 0, 0.75, 0.75, 1, 0.75, 0.75, 1, 1.5, 0.75, 1, 1.5, 1.5, 0, 1.5, 1.5, 0, 1.5, 1.5, 0, 1.5, 0.75, 1, 1.5, 0.75, 0, 1.5, 0.75, 0, 1.5, 1.5, 0, 0, 1.5, 0, 0, 1.5, 0, 0, 0.75, 0, 1.5, 0.75, 1, 0, 0.75, 1, 0, 1.5, 1, 1.5, 1.5, 1, 1.5, 1.5, 1, 1.5, 0.75, 1, 0, 0.75, 1, 1.5, 1.5, 1, 2.25, 1.5, 0, 2.25, 1.5, 0, 2.25, 1.5, 0, 1.5, 1.5, 1, 1.5, 1.5, 1, 2.25, 1.5, 1, 2.25, 2.25, 0, 2.25, 2.25, 0, 2.25, 2.25, 0, 2.25, 1.5, 1, 2.25, 1.5, 0, 2.25, 1.5, 0, 2.25, 2.25, 0, 0, 2.25, 0, 0, 2.25, 0, 0, 1.5, 0, 2.25, 1.5, 1, 0, 1.5, 1, 0, 2.25, 1, 2.25, 2.25, 1, 2.25, 2.25, 1, 2.25, 1.5, 1, 0, 1.5, 1, 2.25, 2.25, 1, 3, 2.25, 0, 3, 2.25, 0, 3, 2.25, 0, 2.25, 2.25, 1, 2.25, 2.25, 1, 3, 2.25, 1, 3, 3, 0, 3, 3, 0, 3, 3, 0, 3, 2.25, 1, 3, 2.25, 0, 3, 2.25, 0, 3, 3, 0, 0, 3, 0, 0, 3, 0, 0, 2.25, 0, 3, 2.25, 1, 0, 2.25, 1, 0, 3, 1, 3, 3, 1, 3, 3, 1, 3, 2.25, 1, 0, 2.25, 1, 3, 3, 1, 3.75, 3, 0, 3.75, 3, 0, 3.75, 3, 0, 3, 3, 1, 3, 3, 1, 3.75, 3, 1, 3.75, 3.75, 0, 3.75, 3.75, 0, 3.75, 3.75, 0, 3.75, 3, 1, 3.75, 3, 0, 3.75, 3, 0, 3.75, 3.75, 0, 0, 3.75, 0, 0, 3.75, 0, 0, 3, 0, 3.75, 3, 1, 0, 3, 1, 0, 3.75, 1, 3.75, 3.75, 1, 3.75, 3.75, 1, 3.75, 3, 1, 0, 3, 1, 3.75, 3.75, 1, 4.5, 3.75, 0, 4.5, 3.75, 0, 4.5, 3.75, 0, 3.75, 3.75, 1, 3.75, 3.75, 1, 4.5, 3.75, 1, 4.5, 4.5, 0, 4.5, 4.5, 0, 4.5, 4.5, 0, 4.5, 3.75, 1, 4.5, 3.75, 0, 4.5, 3.75, 0, 4.5, 4.5, 0, 0, 4.5, 0, 0, 4.5, 0, 0, 3.75, 0, 4.5, 3.75, 1, 0, 3.75, 1, 0, 4.5, 1, 4.5, 4.5, 1, 4.5, 4.5, 1, 4.5, 3.75, 1, 0, 3.75, 1, 4.5, 4.5, 1, 5.25, 4.5, 0, 5.25, 4.5, 0, 5.25, 4.5, 0, 4.5, 4.5, 1, 4.5, 4.5, 1, 5.25, 4.5, 1, 5.25, 5.25, 0, 5.25, 5.25, 0, 5.25, 5.25, 0, 5.25, 4.5, 1, 5.25, 4.5, 0, 5.25, 4.5, 0, 5.25, 5.25, 0, 0, 5.25, 0, 0, 5.25, 0, 0, 4.5, 0, 5.25, 4.5, 1, 0, 4.5, 1, 0, 5.25, 1, 5.25, 5.25, 1, 5.25, 5.25, 1, 5.25, 4.5, 1, 0, 4.5, 1, 5.25, 5.25, 1, 6, 5.25, 0, 6, 5.25, 0, 6, 5.25, 0, 5.25, 5.25, 1, 5.25, 5.25, 1, 6, 5.25, 1, 6, 6, 0, 6, 6, 0, 6, 6, 0, 6, 5.25, 1, 6, 5.25, 0, 6, 5.25, 0, 6, 6, 0, 0, 6, 0, 0, 6, 0, 0, 5.25, 0, 6, 5.25, 1, 0, 5.25, 1, 0, 6, 1, 6, 6, 1, 6, 6, 1, 6, 5.25, 1, 0, 5.25, 1, 6, 6, 1, 6.75, 6, 0, 6.75, 6, 0, 6.75, 6, 0, 6, 6, 1, 6, 6, 1, 6.75, 6, 1, 6.75, 6.75, 0, 6.75, 6.75, 0, 6.75, 6.75, 0, 6.75, 6, 1, 6.75, 6, 0, 6.75, 6, 0, 6.75, 6.75, 0, 0, 6.75, 0, 0, 6.75, 0, 0, 6, 0, 6.75, 6, 1, 0, 6, 1, 0, 6.75, 1, 6.75, 6.75, 1, 6.75, 6.75, 1, 6.75, 6, 1, 0, 6, 0, 0, 6.75, 0, 6.75, 6.75, 1, 6.75, 6.75, 1, 6.75, 6.75, 1, 0, 6.75, 0, 0, 6.75)

[sub_resource type="Environment" id="Environment_hchdp"]
glow_enabled = true
glow_bloom = 0.1

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_gtlbc"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_d41fh"]
friction = 0.0

[sub_resource type="Curve" id="Curve_o48yi"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 25), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wfuue"]
height = 1.5

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1mybw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_boon8"]
render_priority = 0
shader = ExtResource("6_i7e33")
shader_parameter/outline_color = Color(0, 0, 0, 1)
shader_parameter/outline_width = 0.02

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bfkrt"]
render_priority = 0
next_pass = SubResource("ShaderMaterial_boon8")
shader = ExtResource("7_x8qgb")
shader_parameter/base_texture = ExtResource("5_bfkrt")
shader_parameter/lit_color = Color(1, 1, 1, 1)
shader_parameter/unlit_color = Color(0, 0, 0, 1)
shader_parameter/cel_threshold = 0.5
shader_parameter/cel_sharpness = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_76ijo"]
render_priority = 1
shader = ExtResource("11_boon8")
shader_parameter/Vertex_Offset = 0.01
shader_parameter/ColorParameter = Color(0, 2, 4, 0.144)
shader_parameter/Step_Threshold = 1.0
shader_parameter/Step_Sharpness = 0.0
shader_parameter/Texture_Scale = 5.614
shader_parameter/Texture_Randomness = 1.0
shader_parameter/Base_X_Offset = 0.5
shader_parameter/Base_Scale_X = 0.386
shader_parameter/Base_Width = -0.02

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2k153"]
render_priority = 1
next_pass = SubResource("ShaderMaterial_76ijo")
shader = ExtResource("11_boon8")
shader_parameter/Vertex_Offset = 0.0
shader_parameter/ColorParameter = Color(1, 1, 100, 1)
shader_parameter/Step_Threshold = 0.33
shader_parameter/Step_Sharpness = 0.0
shader_parameter/Texture_Scale = 10.0
shader_parameter/Texture_Randomness = 1.0
shader_parameter/Base_X_Offset = 0.5
shader_parameter/Base_Scale_X = 0.0
shader_parameter/Base_Width = 0.0630001

[sub_resource type="Animation" id="Animation_xr6jn"]
resource_name = "Slash_Anim"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Slash_VFX1/Slash_VFX:rotation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Slash_VFX1/Slash_VFX:rotation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1.5708, -0.25, 0, 0.25, 0, -1.5708, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Slash_VFX1/Slash_VFX:rotation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Slash_VFX1/Slash_VFX:surface_material_override/0:next_pass:shader_parameter/Step_Threshold")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Slash_VFX1/Slash_VFX:surface_material_override/0:shader_parameter/Step_Threshold")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.33, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}

[sub_resource type="Animation" id="Animation_2k153"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Slash_VFX1/Slash_VFX:rotation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Slash_VFX1/Slash_VFX:rotation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Slash_VFX1/Slash_VFX:rotation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Slash_VFX1/Slash_VFX:surface_material_override/0:next_pass:shader_parameter/Step_Threshold")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Slash_VFX1/Slash_VFX:surface_material_override/0:shader_parameter/Step_Threshold")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.33, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jo5l8"]
_data = {
&"RESET": SubResource("Animation_2k153"),
&"Slash_Anim": SubResource("Animation_xr6jn")
}

[sub_resource type="Curve" id="Curve_r3i7w"]
_data = [Vector2(0, 0.001), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="QuadMesh" id="QuadMesh_2k153"]
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jo5l8"]
render_priority = 0
shader = ExtResource("10_x8qgb")
shader_parameter/maxDistance = 25.0
shader_parameter/magnification = 1.0
shader_parameter/radius = 0.002
shader_parameter/threshold = 0.025
shader_parameter/outlineColor = Vector4(0, 0, 0, 1)

[node name="Johann_Scene" type="Node"]

[node name="Map" type="Node" parent="."]

[node name="Floor" type="StaticBody3D" parent="Map"]

[node name="FloorShape" type="CollisionShape3D" parent="Map/Floor"]
shape = SubResource("BoxShape3D_tqh3n")

[node name="FloorMesh" type="MeshInstance3D" parent="Map/Floor"]
mesh = SubResource("BoxMesh_i4vfv")
surface_material_override/0 = SubResource("ShaderMaterial_x8qgb")

[node name="Floor2" type="StaticBody3D" parent="Map"]
transform = Transform3D(2.98023e-08, 1, 0, -1, 2.98023e-08, 0, 0, 0, 1, -5, 0, 0)

[node name="FloorShape" type="CollisionShape3D" parent="Map/Floor2"]
shape = SubResource("BoxShape3D_tqh3n")

[node name="FloorMesh" type="MeshInstance3D" parent="Map/Floor2"]
mesh = SubResource("BoxMesh_i4vfv")
surface_material_override/0 = SubResource("ShaderMaterial_x8qgb")

[node name="Floor3" type="StaticBody3D" parent="Map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17, 5, 0)

[node name="FloorShape" type="CollisionShape3D" parent="Map/Floor3"]
shape = SubResource("BoxShape3D_tqh3n")

[node name="FloorMesh" type="MeshInstance3D" parent="Map/Floor3"]
mesh = SubResource("BoxMesh_i4vfv")
surface_material_override/0 = SubResource("ShaderMaterial_x8qgb")

[node name="ProcStairs" parent="Map" instance=ExtResource("1_e2kfs")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 5, 0, 0.5)
num_step = 9
step_height = 0.75
step_depth = 0.75

[node name="@MeshInstance3D@27040" type="MeshInstance3D" parent="Map/ProcStairs"]
mesh = SubResource("ArrayMesh_loe1w")
surface_material_override/0 = SubResource("ShaderMaterial_x8qgb")

[node name="@StaticBody3D@27041" type="StaticBody3D" parent="Map/ProcStairs"]

[node name="@CollisionShape3D@27042" type="CollisionShape3D" parent="Map/ProcStairs/@StaticBody3D@27041"]
shape = SubResource("ConcavePolygonShape3D_bfkrt")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_hchdp")
camera_attributes = SubResource("CameraAttributesPractical_gtlbc")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="WorldEnvironment"]
shadow_enabled = true

[node name="Player" type="Node3D" parent="."]
script = ExtResource("1_df6yh")

[node name="PlayerCharacter" type="RigidBody3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
collision_layer = 4
collision_mask = 3
axis_lock_angular_z = true
mass = 0.1
physics_material_override = SubResource("PhysicsMaterial_d41fh")
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("2_qpf51")
horizontalAccelerationCurve = SubResource("Curve_o48yi")

[node name="PlayerShape" type="CollisionShape3D" parent="Player/PlayerCharacter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
shape = SubResource("CapsuleShape3D_wfuue")

[node name="PlayerMesh" type="MeshInstance3D" parent="Player/PlayerCharacter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0104516, 0, 0.00214553)
mesh = SubResource("CapsuleMesh_1mybw")
surface_material_override/0 = SubResource("ShaderMaterial_bfkrt")

[node name="PlayerGroundCast" type="RayCast3D" parent="Player/PlayerCharacter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.45, 0)
target_position = Vector3(0, -0.5, 0)
debug_shape_custom_color = Color(1, 0, 1, 1)
debug_shape_thickness = 5

[node name="CoyoteTimer" type="Timer" parent="Player/PlayerCharacter"]
wait_time = 0.25
one_shot = true

[node name="JumpCooldownTimer" type="Timer" parent="Player/PlayerCharacter"]
wait_time = 0.1
one_shot = true

[node name="Slash_VFX1" type="Node3D" parent="Player/PlayerCharacter"]
transform = Transform3D(1.54, 0, 0, 0, -6.73155e-08, -1.54, 0, 1.54, -6.73155e-08, 0, 0, 0)

[node name="Slash_VFX" type="MeshInstance3D" parent="Player/PlayerCharacter/Slash_VFX1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
mesh = ExtResource("9_xr6jn")
skeleton = NodePath("")
surface_material_override/0 = SubResource("ShaderMaterial_2k153")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player/PlayerCharacter/Slash_VFX1"]
libraries = {
&"": SubResource("AnimationLibrary_jo5l8")
}

[node name="PlayerCamera" type="Camera3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 8)
script = ExtResource("3_3xcbl")
cameraAccelerationCurve = SubResource("Curve_r3i7w")
horizontalInputMultiplier = 0.25

[node name="Depth_Outline" type="MeshInstance3D" parent="Player/PlayerCamera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.41272, 0, -8.28839)
mesh = SubResource("QuadMesh_2k153")
surface_material_override/0 = SubResource("ShaderMaterial_jo5l8")

[node name="VFX" type="Node" parent="."]
